# Connect4Players

./: .gitignore  CMakeLists.txt  README.md  a.js  a.wasm  index.html
apps/: 1p  CMakeLists.txt  oneplayer.cpp
src/: CMakeLists.txt  Tile.cpp  board.cpp  board.h  main.cpp  minimaxNode.cpp  minimaxNode.h  prog  tile.h
src/players/: consecutivePlayer.cpp  consecutivePlayer.h  humanPlayer.cpp  humanPlayer.h  petersPlayer.cpp  petersPlayer.h  player.cpp  player.h
test/: CMakeLists.txt  testmain.cpp  tests
